--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,11 +6,13 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#18181b",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/android-chrome-512x512.png",
